[package]
name = "swim-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
mio = { version = "1.1.1", features = ["net", "os-poll"] }
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
